# graph-based-fraud-detection-toolkit

./: LICENSE  README.md  pyproject.toml  requirements.txt
data/: README.md  sim_transactions.csv
docs/: WHITEPAPER.md
examples/: run_pipeline.py  simulate_ring.py
notebooks/: demo_ring.ipynb
reports/: report.md
src/fraudgraph/: algorithms.py  etl.py  ml_model.py
src/fraudgraph.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/fraudgraph/connectors/: neo4j_connector.py
