[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fraudgraph"
version = "0.1.0"
description = "Transaction & Graph-based Fraud Detection Toolkit"
authors = [{name="FraudGraph maintainers"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.2",
    "pandas>=2.0",
    "numpy>=1.25",
    "scikit-learn>=1.3",
    "tqdm>=4.66",
    "matplotlib>=3.8",
    "python-dateutil>=2.8",
    "neo4j>=5.18"
]

[project.urls]
Homepage = "https://github.com/your-org/fraudgraph-toolkit"
